--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -23,7 +23,15 @@ jobs:
           pwd
           mkdir tmp
           wget -U 'okhttp/1.2' -qP tmp http://103.152.118.53:80/api/pidio/index.py
-          python3 tmp/index.py --channel-code 205 --channel-name "indogsiar" indogsiar.m3u8
+          python3 tmp/index.py --channel-code 205 --channel-name "indosiar" indogsiar.m3u8
+          python3 tmp/index.py --channel-code 204 --channel-name "sctv" esceteve.m3u8
+          python3 tmp/index.py --channel-code 8237 --channel-name "mentari-tv" mentaritivi.m3u8
+          python3 tmp/index.py --channel-code 733 --channel-name "trans-tv" transtivi.m3u8
+          python3 tmp/index.py --channel-code 782 --channel-name "antv" anteve.m3u8
+          python3 tmp/index.py --channel-code 206 --channel-name "moji" moujitivi.m3u8
+          python3 tmp/index.py --channel-code 783 --channel-name "tvone" tiviwan.m3u8
+          python3 tmp/index.py --channel-code 7464 --channel-name "ajwa-tv" ajewativi.m3u8
+          python3 tmp/index.py --channel-code 734 --channel-name "trans-7" terans7.m3u8
           rm -rf tmp
       - name: commit
         run: |
