--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -32,6 +32,7 @@ jobs:
           python3 tmp/index.py --channel-code 783 --channel-name "tvone" tiviwan.m3u8
           python3 tmp/index.py --channel-code 7464 --channel-name "ajwa-tv" ajewativi.m3u8
           python3 tmp/index.py --channel-code 734 --channel-name "trans-7" terans7.m3u8
+          python3 tmp/index.py --channel-code 9714 --channel-name "jpm-tv" jepeemtivi.m3u8
           rm -rf tmp
       - name: commit
         run: |
