--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -36,6 +36,10 @@ jobs:
           python3 tmp/index.py --channel-code 10975 --channel-name "elshinta-tv" elsehintativi.m3u8
           python3 tmp/index.py --channel-code 8241 --channel-name "rans-channel" ranschanneel.m3u8
           python3 tmp/index.py --channel-code 6362 --channel-name "tvn" tivien.m3u8
+          python3 tmp/index.py --channel-code 205 --channel-name "PERSIK-Kediri-vs-Borneo-FC" live1.m3u8
+          python3 tmp/index.py --channel-code 13610 --channel-name "RANS-Nusantara-vs-PERSIKABO-1973" live2.m3u8
+          python3 tmp/index.py --channel-code 13561 --channel-name "PSIS-Semarang-vs-Bhayangkara-Presisi" live3.m3u8
+          python3 tmp/index.py --channel-code 13559 --channel-name "PERSIJA-Jakarta-vs-PSM-Makassar" live4.m3u8
           rm -rf tmp
       - name: commit
         run: |
