--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -39,6 +39,9 @@ jobs:
           python3 tmp/index.py --channel-code 205 --channel-name "PERSIK-Kediri-vs-Borneo-FC" live1.m3u8
           python3 tmp/index.py --channel-code 13610 --channel-name "RANS-Nusantara-vs-PERSIKABO-1973" live2.m3u8
           python3 tmp/index.py --channel-code 13561 --channel-name "PSIS-Semarang-vs-Bhayangkara-Presisi" live3.m3u8
+          python3 tmp/index.py --channel-code 11683 --channel-name "Basket" live4.m3u8
+          python3 tmp/index.py --channel-code 206 --channel-name "vnl" live5.m3u8
+          python3 tmp/index.py --channel-code 206 --channel-name "vnl" live6.m3u8
           rm -rf tmp
       - name: commit
         run: |
