--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -52,6 +52,8 @@ jobs:
           python3 tmp/index.py --channel-code 8638 --channel-name "Nagaswara" nagaswaradio.m3u8
           python3 tmp/index.py --channel-code 7004 --channel-name "Prambors" Pramborstivi.m3u8
           python3 tmp/index.py --channel-code 13527 --channel-name "Dota" live1.m3u8
+          python3 tmp/index.py --channel-code 11683 --channel-name "ibl-bali" live2.m3u8
+          python3 tmp/index.py --channel-code 11683 --channel-name "ibl-bumi" live3.m3u8
           rm -rf tmp
       - name: commit
         run: |
