--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -54,6 +54,7 @@ jobs:
           python3 tmp/index.py --channel-code 13527 --channel-name "Dota" live1.m3u8
           python3 tmp/index.py --channel-code 11683 --channel-name "ibl-bali" live2.m3u8
           python3 tmp/index.py --channel-code 11683 --channel-name "ibl-bumi" live3.m3u8
+          python3 tmp/index.py --channel-code 13680 --channel-name "h20" live7.m3u8
           rm -rf tmp
       - name: commit
         run: |
