--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -52,6 +52,7 @@ jobs:
           python3 tmp/index.py --channel-code 8638 --channel-name "Nagaswara" nagaswaradio.m3u8
           python3 tmp/index.py --channel-code 7004 --channel-name "Prambors" Pramborstivi.m3u8
           python3 tmp/index.py --channel-code 206 --channel-name "Voli" ChineseTaipeivsKazakhstan.m3u8
+          python3 tmp/index.py --channel-code 13798 --channel-name "Voli" prematch.m3u8
           rm -rf tmp
       - name: commit
         run: |
