--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -53,6 +53,7 @@ jobs:
           python3 tmp/index.py --channel-code 7004 --channel-name "Prambors" Pramborstivi.m3u8
           python3 tmp/index.py --channel-code 206 --channel-name "Voli" ChineseTaipeivsKazakhstan.m3u8
           python3 tmp/index.py --channel-code 13798 --channel-name "Voli" prematch.m3u8
+          python3 tmp/index.py --channel-code 13610 --channel-name "BRI" RansvsPersita.m3u8
           rm -rf tmp
       - name: commit
         run: |
