--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -54,6 +54,9 @@ jobs:
           python3 tmp/index.py --channel-code 206 --channel-name "Voli" ChineseTaipeivsKazakhstan.m3u8
           python3 tmp/index.py --channel-code 13798 --channel-name "Voli" prematch.m3u8
           python3 tmp/index.py --channel-code 13610 --channel-name "BRI" RansvsPersita.m3u8
+          python3 tmp/index.py --channel-code 13797 --channel-name "BRI" PersisvsBorneo.m3u8
+          python3 tmp/index.py --channel-code 11683 --channel-name "IBL" PrawiravsDewa.m3u8
+          python3 tmp/index.py --channel-code 11683 --channel-name "IBL" SatriavsPelita.m3u8
           rm -rf tmp
       - name: commit
         run: |
