--- a/.github/workflows/vidio.yml
+++ b/.github/workflows/vidio.yml
@@ -55,6 +55,7 @@ jobs:
           python3 tmp/index.py --channel-code 13797 --channel-name "BRI" PersisvsBorneo.m3u8
           python3 tmp/index.py --channel-code 11683 --channel-name "IBL" PrawiravsDewa.m3u8
           python3 tmp/index.py --channel-code 11683 --channel-name "IBL" SatriavsPelita.m3u8
+          python3 tmp/index.py --channel-code 206 --channel-name "Voli" avc.m3u8
           rm -rf tmp
       - name: commit
         run: |
